# pytemplate

./: .editorconfig  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: cli.py  main.py
