[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.project_name}} CLI"
dynamic = ["version", "readme"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click==8.1.7",
]

[project.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.project_name}}.cli:cli"

[tool.setuptools.packages.find]
exclude = ["test*", "venv*"]

[tool.setuptools.package-data]
{{cookiecutter.project_name}} = ["*.txt", "*.md"]

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.project_name}}.__version__"}
readme = {file = ["README.md"]}

[tool.distutils.bdist_wheel]
universal = true
