[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.project_name}} CLI"
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Natural Language :: English",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.13",
]
dependencies = [
	"click==8.1.8",
]

[project.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.project_name}}.cli:cli"

##### Hatch

[tool.hatch.version]
path = "{{cookiecutter.project_name}}/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["test*", "venv*"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.envs.default]
installer = "uv"
dependencies = ["ipdb"]

[tool.hatch.envs.test]
installer = "uv"
dependencies = [
	"pytest",
	"pytest-sugar",
	"pytest-mypy",
	"types-click",
]

[tool.hatch.envs.test.scripts]
test = "pytest --disable-pytest-warnings test"
mypy = "pytest --mypy {{cookiecutter.project_name}}"

[tool.hatch.envs.lint]
detached = true  # do not install package
dependencies = [
	"pylint",
]

[tool.hatch.envs.lint.scripts]
lint = "pylint {{cookiecutter.project_name}}"
